@startuml
package "P Relacion Miembros" #FFF2CC {
  class "FRelacionMiembros" as frelacion {
  -MiembrosController miembrosController
  -RelacionesMiembrosController relacionesMiembrosController
  +List<Miembros> miembros1
  +List<Miembros> miembros2
  DefaultComboBoxModel<Miembros> modeloComboMiembro1
  DefaultComboBoxModel<Miembros> modeloComboMiembro2
  --
  -actualizarTabla():void
  -limpiarTabla(DefaultTableModel modelo)
  -cargarMiembro1()
  -cargarMiembro2()
  - getNombreMiembro(List<Miembros> miembros, int idMiembro): String
  + getPanel(): JPanel
  }
  class "MiembrosController" as ctrmiembro{
  -MiembrosDAO miembrosDAO
  --
  +registrarNuevoMiembro(Miembros miembro): void
    +actualizarMiembro(Miembros miembro): void
    +obtenerMiembros() : List<Miembros>
    -esPersonaValida(Miembros miembros): boolean
  }

  class "MiembrosDAO" as daomiembro{
  --
  +agregarMiembro(Miembros miembros):void
  +obtenerMiembros(): List<Miembros>
  +obtenerMiembro(int id): Miembros
  +actualizarMiembro(Miembros miembros): void
  }

  class "BaseDAO" as daobase {
  --
  +obtenerConexion(): Connection
  +insertar(String tabla, Map<String, Object> campos): boolean
  +actualizar(String tabla, Map<String, Object> campos, String condicion): boolean
  +obtener(String tabla, String condicion, RowMapper<T> rowMapper): T
  +obtenerTodos(String tabla, RowMapper<T> rowMapper): List<T>
  +RowMapper<T>
  }
  class "RelacionesMiembrosController" as ctrrelacion{
  -relacionesDAO: RelacionesDAO
  --
  +registrarNuevaRelacionMiembro(Relaciones relaciones): void
  +obtenerRelaciones(): List<Relaciones>
  }

  class "RelacionesDAO" as daorelaciones{
  --
  +agregarRelacion(Relaciones relacion)
  +obtenerRelaciones():List<Relaciones>
  }
   class "ConexionBD" as bdconexion{
     -String CONFIG_FILE
     --
     +Connection establecerConexion()
    }
  entity "Relaciones" as erelacion{
      - int miembro1_id
      - int miembro2_id
      - String tipo_relacion
      --
  }
  entity "Miembros" as miembros{
      -Integer id
      -String nombre
      -String apellido
      -Date fecha_nacimiento
      -String genero
      -String direccion
      -String correo_electronico
      -String telefono
     -Date fecha_bautismo
      -Boolean asistio_culto
      +toString(): String
  }

  frelacion --> ctrmiembro
  frelacion --> ctrrelacion
  ctrmiembro --> daomiembro
  ctrrelacion --> daorelaciones
  daobase <|-- daomiembro
  daobase <|-- daorelaciones
  ctrmiembro ..> miembros
  daomiembro ..> miembros
  daorelaciones ..> erelacion
  ctrrelacion ..> erelacion
  daobase --> bdconexion
}


@enduml